文言の修正

--- a/metastable3/1-02.html
+++ b/metastable3/1-02.html
@@ -14,7 +14,7 @@
 <div class="contents">
 <div class="text">
 　目覚ましがけたたましい音を立てて鳴り響く。
-　本日五度目のアラーム音。藤白は布団から手を伸ばして、時計の頭部分に付いているスイッチを押した。時計の長針が指し示す時刻は五十六分。窓からは陽の光がこれでもかとばかりに差し込み、リビングでは母親がバタバタとせわしなく動く音が聞こえる。もうそろそろ起きないと危ない時間帯だが、いかんせん体がうんともすんとも動いてくれなかった。
+　本日五度目のアラーム音。藤白は布団から手を伸ばして、時計のスイッチを押した。長針が指し示す時刻は五十六分。窓からは陽の光がこれでもかとばかりに差し込み、リビングでは母親がバタバタとせわしなく動く音が聞こえる。もうそろそろ起きないと危ない時間帯だが、いかんせん体がうんともすんとも動いてくれなかった。
 「貴和！　いいかげん起きなさい！」
 　扉越しに母親の声がする。わーった、と返事をするものの全身がとてつもなく重い。起きようという意識だけが頭の表層を上滑するばかりで、それもすぐに眠気の波に埋もれていく。
 「ああ、<ruby>紀佳<rp>《</rp><rt>のりか</rt><rp>》</rp></ruby>ちゃん。いつもごめんね。それに病み上がりだっていうのに」
@@ -32,35 +32,36 @@
 （…………）
 　再び鳴り始めた目覚まし時計にはっとする。時計を見ればもうそろそろ準備を始めなければ危ない時間帯。いけない。ぼさっとしていては授業開始初日から遅刻してしまうではないか。
 　藤白は目覚まし時計のスヌーズを切るとカーキ色のズボンに足を通し、制服に着替えた。朝食を抜いて顔を洗い、寝ぐせを適当に直して人民帽を浅くかぶる。靴を履いて玄関の外にでると、そこに立っていたのはさきほどの少女。
-「遅い。早くしないと遅れる」
-　紀佳はそう言ってじとりとした目つきで藤白を睨んでみせる。いつもと変わらなぬ、少しわざとらしいくらい普段通りの仕草だった。
+「遅い。わたしまで遅刻させる気？」
+　紀佳はそう言ってじとりとした目つきで藤白を睨んでみせる。怒っているわけではたぶんない。紀佳の目つきは普段からこうだ。
 「紀佳……あのさ俺……」
-「もういいから。私その話したくない。それより早くいこ？」
-　少女はそれだけ言い捨てると、団地の廊下を一人歩き出す。藤白も慌てて後を追った。黙々と廊下を歩き、無言でエレベーターに乗って外へ出る。団地の外の日差しは燦々として柔らかく、まさに春といった様子だった。
+「話ならあと。初日から遅れたくないなら早くいこ？」
+　少女はそれだけ言い捨てると一人歩き出す。藤白も慌てて後を追った。団地の外の日差しは燦々として柔らかく、まさに春といった様子である。
 　そんなさやわかな春の空気が満ちるニュータウンを、藤白と紀佳は学校へ向けて歩いて行く。いつもなら紀佳が一方的に好きな漫画の話をしたり、藤白が日常の些細な出来事を報告したりしながら過ぎていくだけの時間も、今日ばかりは少しだけ空気が重い。
 「このペースだと……うん、ぎりぎり間に合いそう」
-　そして信号待ちをしている途中、重い空気を先に破ったのは紀佳だった。
-「授業開始初日からこれだと先が思いやられる。これからはちゃんと早起きしてほしい」
+　信号待ちをしている途中、重い空気を先に破ったのは紀佳だった。
+「初日からこれだと先が思いやられる。これからはちゃんと早起きしてほしい」
 「……別に来なくても良かったんだぞ」
-　同じく信号待ちをする藤白は、後ろに立つ紀佳を振り返らずにそう告げた。二人の前を『たけのこ幼稚園』の送迎バスがのろのろと横切る。車内で幼稚園児が楽しそうにはしゃいでいるのが見えた。
+　振り返らずにそう告げた。
+　二人の前を『たけのこ幼稚園』の送迎バスがのろのろと横切ってゆく。車内で幼稚園児が楽しそうにはしゃいでいるのが見えた。紀佳が朝起こしに来るのが日課になったのは、あれくらいの頃からだったか？
 「別に毎朝起こしに来てくれなくたって、俺が朝起きれなくて遅刻したって、紀佳が困るわけじゃない。学年の変わり目だし、昔から続けてた日課を止めるいい機会だったんじゃないか？　どうして今日来たんだよ。やめとけばよかったのに」
 「…………」
 　背後の少女は答えない。
-「大体、紀佳はいっつもそうだ。いつもぼけっとした無表情で何考えてんだかわかんないから俺は――って、うわっ！？」
-　突然、藤白の膝が折れ曲がった。
-　あまりの唐突さに、それが背後からなされた不意打ちの膝かっくんであると気付くまで少し時間を要してしまう。
+「高校出たら、いつまでも続けられるわけじゃないし。紀佳がどう考えてるか知らないけどさ。そもそも紀佳は、いつも無表情でぼけっとして何を考えてるか――って、うわっ!?」
+　突然膝が折れて尻餅をつく藤白。あまりの唐突さに、それが背後からなされた不意打ちの膝かっくんであると気付くまで少し時間を要してしまう。
 「って紀佳、何やってんだよ！　お、俺は真面目な話を――」
 「信号変わった」
 　紀佳は藤白の剣幕などどこ吹く風といった様子で目の前の信号機を指さすと、一人そそくさと横断歩道を渡り始める。
-「ただでさえ時間あぶないのに、悠長にそんな話してる時間ないでしょ。ほら、早く行こう」
+「ただでさえ時間あぶないのに、悠長にそんな話してる時間ないでしょ。ほら、早く行こ？」
+　やっぱり、紀佳は何を考えてるかわからない。藤白はそう思った。
 　そして十分ほど歩いた先。緑につつまれた団地と戸建住宅が立ち並ぶニュータウンを抜けたすぐの場所に、二人の通う党立真揺高校は立地している。校門の前に来ると、カーキの人民服を来た男女がどっと増えた。みなこの学校の生徒である。時間が時間だからか、校門を横切る人民服姿の生徒たちは誰も心なしか早足だ。
 「じゃあ、私はこっちだから」
-　昇降口の前で紀佳はそう告げると、小さく手を降って自らの靴箱へ向かって歩き出す。彼女は今年から三年、藤白は今年から二年だ。
-　そう紀佳は藤白よりもひとつ年上である。向かいの団地に住んでいて小学生の頃からよく一緒に遊んでいたので時々忘れてしまいそうになるが、紀佳は自分より一足先に卒業してしまうのだ。そんな人間にいつまでも朝起こしに来てもらうわけにはいかないと藤白は思う。
+　昇降口の前で紀佳はそう告げると、小さく手を降って自らの靴箱へ向かって歩き出す。彼女は今年から三年、藤白は今年から二年。小学生の頃からよく一緒に遊んでいたので時々忘れてしまいそうになるが、紀佳は自分より一足先に卒業してしまうのだ。そんな人間にいつまでも朝起こしに来てもらうわけにはいかないと藤白は思う。
 「俺も……早起きできるようにならないとな」
-　紀佳の小さな背中を見送り言葉をこぼすと、同時に予鈴が鳴った。まずい、そろそろ教室へ向かわねば。藤白は急いで自らの下駄箱へと向かうと靴を履き替えて教室に向かった。
-「…………」
-　そして数時間。数学の教師がうねった三次関数のグラフを黒板に書き入れるのを藤白はぼさっと眺めている。ガツガツと黒板に数式を書き入れる音も、今の藤白にはどこか上の空。
+　紀佳の小さな背中を見送ると、同時に予鈴が鳴った。まずい、そろそろ教室へ向かわねば。藤白は急いで自らの下駄箱へと向かうと靴を履き替えて教室に向かった。
+
+　そして数時間。
+　数学の教師がうねった三次関数のグラフを黒板に書き入れるのを藤白はぼさっと眺めている。ガツガツと黒板に数式を書き入れる音も、今の藤白にはどこか上の空。
 　新学期第一日目の授業は案の定、身が入らなかった。現在藤白の頭を満たすのは授業ではなく、つい先日の出来事。
 （精神作業従事者か……）
 　昨日、あの後別室で津雲から聞いた話を思い出す。
@@ -68,18 +69,19 @@
 　津雲が開口一番に言ったのは、そんな言葉だった。
 　ニューロワーム。
 　この空間に満ち満ちているオルゴンを媒介とした情報生命体で、人の脳に寄生し、悪さをする病原体だ。そしてニューロワームに感染すると、その患者は眠ったままになってしまう……。藤白が知っているのはそんなところだ。
-『まあ、そんなところだな』
+『そうだな。ニューロワームについての理解はそれでいい』
 　津雲の声が頭の中を反響する。
-『昨今、そのニューロワームは軍事利用するための研究が各国で盛んになっているんだ。まずは米国が目をつけて、その後に中国も開発を始めると、火が着いたように世界中で軍事目的の研究が始まった。そしてここ日本でも世界の潮流に乗っかって数年前から研究部門を立ち上げることになったわけだが……その臨床データを提供する場として選ばれたのが、ここ精神医療センターだ。解放軍の制服組である俺が<ruby>病院<rp>《</rp><rt>こんなところ</rt><rp>》</rp></ruby>に居るのもそういう理由だな』
+『それで、だな。昨今、そのニューロワームは軍事利用するための研究が各国で盛んになっているんだ。まずは米国が目をつけて、その後に中国も開発を始めると、火が着いたように世界中で軍事目的の研究が始まった。そしてここ日本でも世界の潮流に乗っかって数年前から研究部門を立ち上げることになったわけだが……その臨床データを提供する場として選ばれたのが、ここ精神医療センターだ。解放軍の制服組である俺が<ruby>病院<rp>《</rp><rt>こんなところ</rt><rp>》</rp></ruby>に居るのもそういう理由だな』
 　――じゃあ彼女は、青山希海は何のためにあの病院に出入りしているんですか？
 　希海は軍人でも医者でもない高校生だ。そんな彼女に、軍事研究なんていう高度なことができるとは思えない。それに対する津雲の答えはこう。
-『そのニューロワームに感染した場合なんだが……ああ、兵器としてのそれじゃなくて、自然にいるヤツだぞ？　自然のニューロワームに感染した場合、一番多く見られる症状が『眠ったままになる』っていうものだ。これは閉律症って呼ばれてるわけだが、この閉律症の治療には少しばかり特殊な資格が必要でな。その資格を持ってる青山はここの病院で治療行為をしつつ、俺たち解放軍に臨床データを提供してくれている、というわけだ』
+『お前も言ったとおり、自然のニューロワームに感染した場合一番多く見られる症状が『眠ったままになる』っていうものだ。これは閉律症って呼ばれてるわけだが、この閉律症の治療には少しばかり特殊な資格が必要でな。その資格を持ってる青山はここの病院で治療行為をしつつ、俺たち解放軍に臨床データを提供してくれている、というわけだ』
 　煎茶を片手に得意げな表情で話をする男の表情が藤白の脳裏に蘇る。
 『どうやって治療するんだ？　って顔をしてるな。それはな……脳を“繋ぐ”んだよ。患者の脳と、治療者の脳を』
 　あのときの津雲の顔は十年先でも忘れないだろう。
 　あの男が言うには、その“治療”とは患者の脳と作業者の脳を機械で繋ぎ、直接患者の精神に入り込むことによって行うらしい。
 　そして、この『患者の精神に入り込む』という点が曲者だ。
-　閉律症を発症してしまう直接的な原因はニューロワームによるものだが、そもそも精神状態が健全な人間は通常の免疫力によってニューロワームに感染することはほとんどない。なんらかの原因によって精神の免疫が弱った状態にあってはじめて、ニューロワームに感染してしまうのだ。つまり患者の多くは、現実世界でなんらかの問題を抱えている。そして、その患者の少なくない割合の者が、閉鎖された精神世界から外へ出ることを拒絶する。自らを苛む世界で生きることよりも、心を煩わせることがない、平穏な閉じた世界で生きることを望むのだ。このように元の世界へ帰ることを拒絶した患者をどう治療するのか。答えは簡単。力づくで、無理矢理に連れ戻すのである。
+　閉律症を発症してしまう直接的な原因はニューロワームによるものだが、そもそも精神状態が健全な人間は通常の免疫力によってニューロワームに感染することはほとんどない。なんらかの原因によって精神の免疫が弱った状態にあってはじめて、ニューロワームに感染してしまうのだ。つまり患者の多くは、現実世界でなんらかの問題を抱えている。そして、その患者の少なくない割合の者が、閉鎖された精神世界から外へ出ることを拒絶する。自らを苛む世界で生きることよりも、心を煩わせることがない、平穏な閉じた世界で生きることを望むのだ。
+　では、このように元の世界へ帰ることを拒絶した患者をどう治療するのか。答えは簡単。力づくで、無理矢理に連れ戻すのである。
 　――無理矢理って……？
 『言葉のままだ。戦って、閉鎖空間の核を破壊すればいい』
 （…………）
@@ -92,22 +94,22 @@
 　つい一週間ほど前の出来事が藤白の頭をよぎる。白い病院のベッドで眠ったまま、呼びかけてもぴくりとも動かない細身の少女。
 （あいつも、誰かと戦って連れ戻されたのかな……）
 　ニューロワームに感染し、閉律症を患った紀佳のことを思うと、再びあの少女の顔が思い出された。
-（青山希海、ニューロワーム、閉律症、戦って連れ戻す……か。俺にもできるんだろうか……）
+　青山希海、ニューロワーム、閉律症、戦って連れ戻す……。自分にもできるのだろうか？
 　あの後、藤白は病院でいくつかの検査を受けさせられた。津雲曰く、精神医療従事者としての適性を判断する、だそうだ。検査の結果が基準値より上なら合格。晴れて希海と同じチームに配属させてもらえるらしい。
 「藤白」
 　不合格なら話はなかったことになるが、津雲いわく藤白は『いけそう』とのことだ。何の根拠があってのことかは分からないが、ともかく、この検査を乗り越えられれば、自分はまたひとつ希海に近づくことができる。
 「藤白！！」
 「あっはい！」
-　意識が現実に引き戻された。壇上では眉間に皺を寄せた教師が、藤白を訝しげな表情で睨んでおり、クラス中の視線が藤白に注がれる。
+　意識が現実に引き戻された。壇上では眉間に皺を寄せた教師が、こちらを訝しげな表情で睨んでおり、クラス中の視線が藤白に注がれる。
 「お前、この問題解いてみろ」
 「あっ……え、えっと……あの……。すいません、聞いてませんでした」
 「やっぱりな。ちゃんと授業は――」
 　教師が言葉を言い切るより先にチャイムが鳴った。
 「……仕方ないな。じゃあ今日はここまで」
-　そして数学の教師は資料をまとめてさっさと教室を出て行ってしまう。クラス中が喧騒に支配されてもなお、藤白の頭に残った単語は消えない。
+　そして数学の教師は資料をまとめてさっさと教室を出て行ってしまう。だがクラス中が喧騒に支配されてもなお、藤白の頭に残った単語は消えない。
 　青山希海、ニューロワーム、閉律症、戦って連れ戻す。
 「はぁ」
-　ホームルームが終わると同時に藤白はため息をついた。そのため息は自らの今後に対する期待と不安の表れだ。
+　ホームルームが終わると同時に藤白はため息をついた。それは自らの今後に対する期待と不安の表れだ。
 （またあそこへ行くのか）
 　そうだ。今日の放課後はまたあの病院へ行かねばならない。検査の結果を聞いて、合格ならば軽いオリエンテーションを受ける予定になっている。
 　よし、とつぶやいて自分を鼓舞し、学校指定のメッセンジャーバッグを肩に担いだ。こうなったらとことんまでやってやろう。どこまで行けるか分からないし、どうなるのかも分からないが、少しでもあの子に近づくためだと藤白は思う。
@@ -118,11 +120,13 @@
 （青山……さん？）
 　彼女とは病院でしか会えないような気がしていたが、よくよく考えればそんなことはない。同じ学校に通っているのだ。何かの拍子に再び顔を合わせることは容易に起こり得る。
 （声でも……掛けた方がいいのかな）
-　そう思って藤白は希海の背中を追う。昨日後を付けた時と何一つ変わらぬ背中は階段を一つ上り、廊下を少し歩いたところにある扉に入っていった。
-（えっ……？　年上……だったのか）
-　希海が入っていた部屋には『３－６』という掲示が掲げられている。後ろのドアから中を覗き見れば、教室の中はまだホームルームの最中であった。静かに椅子に座り、担任教師の話を聞く生徒たち。教室中から『早く終われ』というムードが漂っている。そしてそんな生徒たちの中に、見知った後ろ姿があった。
+　そう思って藤白は希海の後を追う。昨日と何一つ変わらぬ背中は階段を一つ上り、廊下を少し歩いたところにある扉に入っていった。
+（えっ……？）
+　希海が入っていた部屋に掲げられていたのは『３－６』という掲示。
+（年上……だったのか）
+　後ろのドアから中を覗き見れば、教室の中はまだホームルームの最中であった。静かに椅子に座り、担任教師の話を聞く生徒たち。教室中から『早く終われ』というムードが漂っている。そしてそんな生徒たちの中に、見知った後ろ姿があった。
 （げっ……そういえば紀佳もこのクラスだった）
-　最後尾の席に座った紀佳はボケっとした顔で担任の話に耳を傾けている。だがこの小さな窓からはどんな角度で覗いてみても、希海の姿は見当たらない。ここからは死角になっている前の方の席なのだろうか。
+　紀佳は最後尾の席に座り、ボケっとした顔で担任の話に耳を傾けている。だがこの小さな窓からはどんな角度で覗いてみても、希海の姿は見当たらない。死角になっている前の方の席なのだろうか。
 　そんなことを考えているうちにホームルームが終わり、教室内がにわかに活気づきはじめた。藤白は教室のなかを覗きこむのをやめ、腕を組んでさも誰かを待っているそぶりをする。担任と思しき教師が部屋から出てくると、ついで雪崩をうったかのように教室からぞろぞろと生徒が出てきた。その一団に探し求めている人物の背中がないか、藤白はしばらく目を凝らして探してみた。途中紀佳が出てきたときは慌てて後ろを向いたが、それ以外はずっと注意を切らさない。
 　だがいくら待ってみても希海はなかなか姿を現さなかった。
 （後ろ向いてる間に出て行ってしまったのか……？）
@@ -151,7 +155,7 @@
 「んで、お前はあいつの何が知りたいんだ？」
 　連れて行かれた廊下。佐竹は藤白の肩に腕を回したままの姿勢で、心底嬉しそうな表情で質問を投げかける。
 「ていうか先輩、あの人のこと知ってるんですか？　まだクラス分けされて二日目ですよ」
-「あああいつ……。青山さんとは高一の頃に同じクラスだったからな。てかお前、紀佳ちゃんがいるのにこれ以上新しい子にちょっかい掛けようとは一体どういう了見だ？　答えによっちゃ許さんぞ」
+「あああいつ……。青山さんとは一年の頃に同じクラスだったからな。てかお前、紀佳ちゃんがいるのにこれ以上新しい子にちょっかい出そうとは一体どういう了見だ？　答えによっちゃ許さんぞ」
 　そう言って頭を小突いてくる佐竹。藤白は肩に回された腕ごと強引にそれを撥ねのけ、
 「ち、違いますって！　そういうのじゃないですから！　なんというか……ただ単純にちょっと気になるんですよ」
 「お前なあ……その『ちょっと気になる』が世間でなんて呼ばれてるのか知らんのか」
@@ -173,7 +177,7 @@
 
 <script type="text/javascript">
 <!--
-document.cookie="hpftflag=hpftflag0;max-age=15552000";
+document.cookie="ms3flag=ms3flag0;max-age=15552000";
 //-->
 </script>
 
