--- a/metastable3/1-03.html
+++ b/metastable3/1-03.html
@@ -72,7 +72,7 @@
 　そう言って人民帽をとり、小さく会釈する希海。もっと物静かな印象があったが、こうして実際に話しているのを前にすると案外そうでもなさそうである。
 「青山さん、よろしく。私は古江紀佳。クラス同じだし、これから仲良くしよう。そんでもってこっちは……」
 「えっと……藤白貴和だ。なんか色々あって今日からこっちにお世話になりそう。これからよろしく。あ、青山先輩」
-「えっと古江さんに藤白くん、ね。まあまだ分からなかいことも沢山あるだろうけど、何かあったら私に聞いてくれたらいいから」
+「古江さんに藤白くん、ね。まあまだ分からなかいことも沢山あるだろうけど、何かあったら私に聞いてくれたらいいから」
 　三人がそれぞれ自己紹介を終えるのを見計らって津雲がまとめにはいる。
 「青山は高一の頃からこっちでバイトまがいのことしてたからな。今年で三年目か。まあ経験はかなりある方だと思うから、何かあったら頼るといい。じゃあ今から……そうだな。せっかくだし、さっそくルーミングやってみるか？」
 「ルーミング？」と紀佳。
@@ -187,7 +187,7 @@
 「えっ！？　ちょ、ちょっとやめてよ藤白くん。わ、私にだって知られたくないことくらい」
 「ところで青山さん」
 「な、なに？」
-「今までで一番恥ずかしい経験は何ですか」
+「今までで一番恥ずかしかった経験は何ですか」
 「やめんかボケっ！　ああああああもうやだやだ！　絶対教えないからね！　あーあーあーあーあーあーあー！！」
 「ま、まあ大丈夫だと思うぞ。こうして普通に会話してても、何も頭に聞こえてこないし、意識して強く念じない限りは俺の言葉も、先輩の言葉も互いに聞こえないんだと思う」
 「そ、そう……。だ、だったらいいんだけど……」
@@ -278,7 +278,7 @@
 
 <script type="text/javascript">
 <!--
-document.cookie="hpftflag=hpftflag0;max-age=15552000";
+document.cookie="ms3flag=ms3flag0;max-age=15552000";
 //-->
 </script>
 
