--- a/metastable3/1-04.html
+++ b/metastable3/1-04.html
@@ -83,7 +83,7 @@
 
 <script type="text/javascript">
 <!--
-document.cookie="hpftflag=hpftflag0;max-age=15552000";
+document.cookie="ms3flag=ms3flag0;max-age=15552000";
 //-->
 </script>
 
