--- a/metastable3/-.html
+++ b/metastable3/-.html
@@ -13,178 +13,181 @@
   <div v-component="metastable-page-header"></div>
 <div class="contents">
 <div class="text">
-　何台ものバスが排煙をくもらせながらロータリーを周回する。
-　バスの行き先は様々だ。真浜大医学部病院前行き、中新台巡回、漸新台経由の中央地区センター行き……。藤白は目の前を通り過ぎるベージュ色の市バスを落ち着かない目で追っていた。
-「青山さん、もうすぐ来るかな？」
-　隣で突っ立っていた紀佳がこぼす。彼女も同じように目の前を通り過ぎるバスをじとりとした目で追っていた。
-「ああ、そろそろ時間だからな」
-　藤白はポケットから携帯端末を取り出しバックライトを点灯させる。ディスプレイに表示された時刻は朝の九時五十八分。集合時刻まであと二分というところだった。
-「それにしても……。随分とまた急に決まったもんだなぁ……」
-「まあね。でもカズくん、まんざらでもないでしょ」
-　こちらをじろりと睨む紀佳。
-「なんで」
-「だって、青山さんと一緒にお出かけできるんだもんね」
-「つっ――！？」
-　思わず、携帯端末を落としそうになった。その間抜けな様子に通行人の一人が振り返る。
-「ばか、何言ってんだよ」
-「そう？　カズくんのそわそわした感じ、見ててすっごい伝わってくるけど」
-「違うだろっ！　だいたいこれは津雲さんのせいで――」
-　藤白はそう取り繕って意識を昨日に飛ばす。
-　そう、それはちょうど昨日の夕方のことだ。
 
-「うーん。今日も暇ねえ……」
-　精神医療センターの待合室。夕日に赤く染まった部屋の中腹で、椅子に座った希海がぽつりとこぼした。
-「まあ患者が来ないってことは、いいことなんだけどさ……」
-　言いながらうん、と伸びをする。
-　模擬戦をしたあの日から一週間。その間というもの、特にニューロワームに感染した患者が運び込まれることもなく、三人は待合室でぼけっと時間を潰す日々を繰り返していた。
-「…………暇」
-　同じくパイプ椅子に腰掛けた紀佳が窓の外を眺めて言った。彼女の長い黒髪は夕日に照らされ赤く輝いている。
-「先輩、俺らの業務ってひょっとしてほとんどこんな感じでやることなかったりするのか？」
-「うーん、まあ忙しいときは忙しいけどね。毎日患者がやってきてさ、学校が終わるたびにルーミング、とか」
-「そうなのか……でも今は……」
-「暇ね」
-　そう言って希海は脱いであった人民帽を手に取り、くるくると指の先で回してみせる。一方の藤白はその様子をただ何も言わずに眺めるだけだ。明るい色のくせっ毛と少し長いまつげ、そして負けん気の強そうな顔を自らの網膜に焼き付けんとするばかりに。
-　次の瞬間、その横顔がちらりとこちらを振り返る。
-「あっ……」
-　目が合った。同時に希海は気まずそうに明後日の方向を向いてしまう。
-　ふう、と小さくため息。
-　出会って数日間、毎日こうして病院の待合室にて時間を共有しているが、希海とは未だに打ち解けたと言えるほど仲良くはなっていなかった。
-「……トランプでも買ってくる？」
-　不意に、突っ立っていた紀佳がそんな提案をする。
-「買ってくるってどこで？」と藤白。
-「病院の購買」
-「そんなもん売ってんのか？」
-「さぁ……？　でもやることもないし、探しに行くくらい良いんじゃない？」
-　トランプか……。また紀佳の変な思いつきが出た形だが、こんな風にやることがない以上、それも良いのかもしれない。
-「そうだな、じゃあ――」
-　そう言って藤白が立ち上がり、扉のノブに手を掛けたそのとき。
-　ガチャと、扉が開いた。立っていたのは悪ガキのような顔をした軍服の男――津雲である。
-「おっと、すまんな。どっか行こうとしてたのか？」
-　彼の低い声に三人の視線が集まる。
-「え、ええ。ちょっと暇なんで購買まで行こうかと……。津雲さんこそどうしたんですか？　あっ……ひょっとして……」
-　患者が運び込まれたのだろうか。そう思って息を呑む藤白だったが、
-「いや、別にそういうことじゃない。単にな、俺も暇だったんだよ」
-「なんですかそれは……」
-　仕事しろ、と思った藤白だったが、よくよく考えると患者が居ない以上この人達もやることがないのかも知れない。
-「ていうかお前ら、どうした？　なんか空気が固いなぁ……。せっかく会って一週間も経ったんだし、もう少し楽しく会話でもしたらどうだ？」
-　やることがないからでしょうが。おせっかいにも津雲とやらは三人の間にただよう緊張した沈黙を汲んでやたらと明るい声で話を弾ませようとする。
-　だが、おしゃべりには花が咲かない……というかもう十分花を咲かせてしまったせいで今は枯れてしまっている状態だ。どこのクラス？（藤白は２－６で紀佳と希海は３－６）とか、どこに住んでるの？（藤白は中新台の団地、紀佳は鮮新台の団地、希海は漸新台の一戸建て）とか、部活なにをやってる？（三人とも部活には所属していない。病院での活動があるのだから当たり前である）だとか、そういう話は出会ってすぐの頃に終わってしまい今は話題に事欠く事態が続いている。
-「うーん。これはいかんな……」
-　そしてその沈黙を破ったのはやはり津雲だった。
-「お前ら、ひょっとしたら明日にでも一緒に患者の治療をしなきゃいけないんだぞ？　なのにそんなよそよそしくってどうするんだ。よしここはひとつ……」
-　そうして津雲はピンと指を一本立ててニヤリと笑う。
-「お前ら、明日一緒に遊びに行け」
-「…………は？」
-　その素っ頓狂な声は誰のものだったのだろう。
-　『何を言ってるんだこの人は』と藤白は苦笑いを浮かべ、希海は『また始まった』と言わんばかりに頭を抱えた。紀佳は相変わらず眠たそうな表情のまま微動だにしない。
-「あの、遊びに行くってどこに？」
-　最初に口を開いたのは藤白。
-「んなのどこだっていい。遊園地なり山登りなり、行く場所はお前らで決めろ」
-「そ、そんなこと言われたって……」
-　困った顔を浮かべて後ろを振り返ると、同じく困った顔の希海と目が合った。
-　ああ、でも先輩と出かけられるなんて、これはチャンスなんじゃ……。そんな考えが藤白の脳裏をかすめたとき、
-「あ、そういえば私、靴買いたい。通学用のスニーカー」
-　紀佳が思い出したように言った。
-「じゃあちょうどそれでいいだろ。せっかく明日は土曜なんだし中央駅のあたりでショッピングでもして、ついでに飯でも食ってこい」
-「おー。そうですね。じゃあそうさせてもらいます」と紀佳。
-「うむ。楽しんでこいよ。じゃあ俺はそろそろ別の仕事があるから……」
-　そう言って津雲はばたんと扉を閉めてどこかへ行ってしまう。
+　真揺ニュータウンには五つの鉄道駅が存在している。
+　<ruby>地鉄<rp>《</rp><rt>メトロ</rt><rp>》</rp></ruby>一号線の真揺中心駅と夕羅台駅。<ruby>地鉄<rp>《</rp><rt>メトロ</rt><rp>》</rp></ruby>六号線の鮮新台駅・白堊台駅・上新台がそうである。その中でも三人の家から特に近いのが鮮新台駅であり、この駅周辺は真揺ニュータウンの北地区センターに指定されている。
+　そしてその北地区センターのバスロータリーの前。鮮新台駅の改札からほど近い場所に、紀佳と藤白は立っていた。
 「…………」
-　藤白は何も言わない。
-「…………」
-　希海も何も言わない。
-「だってさ。楽しみだね」
-　はぁ、と、希海が大きくため息を付くのが聞こえた。
+　ベージュと青色の塗装が印象的な市営バスが、エンジンの轟音と共に排気ガスをくもらせながら目の前を過ぎ去っていく。藤白はその様子をただぼうっと眺めていた。
+「青山さん遅いね」
+　隣に立っていた紀佳がこぼす。ああ、と答えた藤白が手元の携帯端末で時刻を確認しすると、ディスプレイの時計は朝の十時十二分を指し示していた。既に待ち合わせ時刻を十分はオーバーしている。
+　藤白ならともかく、希海が待ち合わせに遅れてくるなんて珍しい。何かあったのか？　そう思って希海に電話でも掛けようとしたその時、
+「あ、メール……」
+　藤白の携帯端末がぶるりと震え、通知欄に新着メールの存在を知らせる表示が点った。
+『ごめん！　寝坊しちゃった！　少し遅れそう』
+　遅れそうも何も、既に遅れているのだが……。そう思ったが口には出さないことにしておく。藤白はこの三人の中で一番遅刻が多いのだ。たまに希海が遅れてしまったからといってアレコレと文句を垂れるのはやめておこうと思った。
+「青山さん？」
+「ああ、寝坊しちゃって遅れるってさ」
+「ふーん。まあ別に急ぐ用事じゃないし、ゆっくり行こうよ」
+「そうだな。どうせ買い物してお茶するくらいだし……」
+　そう。三人は今から買い物に出掛けるのだ。
+　お目当てのものは水着。ちょっとしたことで今月末、海へいくことになってしまったのだ。
+「それにしても津雲さん、バーゲンの情報とか知ってたんだね。意外」
+「いや、普通みんな知ってないか？」
+「知らないよ。カズくんはそういうの好きだから詳しいだろうけど、他の人は違うんじゃない？」
+「そうかなあ……」
+「そうだよ」とこぼし、紀佳は頭上の太陽を恨めしそうに見上げた。
+「それにしても暑い……」
+　白のワンピースから伸びた細い腕で、額の汗を拭ってみせる紀佳。その様子がどこか艶めかしく、藤白は目のやり場に困ってしまう。
+「海、楽しみだな」
+　再びバスロータリーに目線を移すと、そんな言葉がこぼれた。
+「そう思うなら津雲さんに感謝しないと。あと別に行きたくない私にも」
+「お前……まだ乗り気じゃなかったのか……」
+「だって、今回のことはカズくん達で勝手に決めちゃったんじゃない」
+「ああ、それはすまなかったよ。でも正直紀佳だって、そんなに嫌じゃないんだろ？」
+「まあね」
+　そんな風に紀佳と会話を交わしながら、藤白は意識を前日に飛翔させてみる。
+　事の発端は津雲のある一言だった。
 
-　そんなわけで藤白と紀佳は、こうして北地区センターで希海と待ち合わせをしているのだ。
-「先輩遅いなあ……」
-　ロータリーを回るバスを数台目で追い、再び携帯端末を取り出した藤白。ディスプレイに表示されている時刻は十時五分。集合時間を数分オーバーしていた。
-「遅いってまだ五分しか経ってないじゃない」
-「いや、そりゃそうなんだけど……」
-「カズくん、がっつきすぎ」
-　もう突っ込むのはやめよう。
-　そしてそんなやり取りをもう五分ほど続けた頃。
-「ご、ごめん、待った！？」
-　二人の後ろからようやく聞き慣れ始めた声がした。
-　振り返った先に立っていたのは希海。水色のチュニックにジーンズというボーイッシュな格好をして、はぁはぁと肩で息をついている。
-「青山さんおはよう」
-　隣にいた紀佳が声をかける。藤白もあわてて「先輩、おはよう」と挨拶を交わした。
-「ごめんね。つい寝坊しちゃってさ……」
-「い、いやいいって。俺らも今来たところだし」
-「さっきまで『遅いな～』って言ってたくせに」
-「ちょっ……紀佳！」
-　またこいつは余計なことを……。
-　そんな風に少しのやりとりをしてすぐに電車に乗った。三人の自宅の最寄り駅であるここ<ruby>地鉄<rp>《</rp><rt>メトロ</rt><rp>》</rp></ruby>鮮新台駅から目的地まではおよそ三十分。菅原駅で郊鉄の快速に乗り換え、三駅分ほど電車に揺られればすぐに到着する。
-　電車の中では特に会話もない三人だったが、目的地が近づくほどに気分が高揚していくのを感じる藤白だった。
+「お前ら、これ行ってみないか」
+　もうすぐ夏休みに入ろうかという頃合いの、強い日差しが差し込む部屋で、津雲は一枚のチラシを手にして言った。
+「なんですか？　これ」
+　藤白が手にとったそれには大きな赤いゴシック体で『<span class="simplified">第一回・精神医疗从事者夏合宿</span>』と書かれている。
+「夏合宿……？」
+　横から顔を覗かせながら希海が言う。その声に誘引されるように紀佳もこちらに視線を向けた。
+「ああ、今度の月末に東京の方でこんな催しがあるんだ。内容はまあ全国の精神医療従事者達の交流と、あと二、三の勉強会がある」
+「それが東京で？」
+　そうだ、と津雲。
+「せっかくお前らこうして精神医療従事者やってるんだし、どうだ？　ここはひとつ参加してみないか？」
+「ああ、いいですね。面白そうですし是非参加してみたいです。一度東京も行ってみたかったですし」
+　満面の笑みで答える藤白に対して「うーん……」と連れない返事を返したのは希海である。
+「でもさ、そんな遠方の人と交流深めたところで……じゃない？」
+　紀佳も希海の意見に「勉強したくない」と加勢する。そんな二人の乗り気でない様子に津雲は少し不満気だ。
+「何だよお前ら連れないなあ……」
+「そうだぜ。先輩、紀佳。せっかくなんだしちょっと行ってみないか？　東京とか行ってみたいだろ」
+　二人は「いや、別に」と声を揃える。ああ、こりゃダメか？　と藤白だったが、津雲は依然引き下がろうとしない。
+「そこを何とか。この合宿の開催には俺の上司も一枚噛んでて、その人から人数揃えてくれって言われてるんだよ……。交通費とかは経費で落としてやるからさ」
+「うーん、でも……」
+「そうだ！　お前ら海とか行きたくないか？　何なら合宿行った帰りに湘南のあたりで海水浴でもしてくるといい。一泊くらい多めに宿代出してやるからさ。遊びに行くついでだと思って……頼むっ！」
+　いつになく下手に、パンと手を合わせる津雲。その様子に乗り気でなかった希海も少しずつ検討をしはじめる。
+「海……か。確かにそれはちょっと魅力的ね……」
+「そうかな？」と紀佳。
+「だろ？　悪い話じゃないから三人で遊んでこい」
+「そうだぜ先輩。せっかく夏なんだしみんなで旅行も悪くないだろ」
+「私泳げない」と紀佳。
+「まあ、津雲さんや藤白くんがそこまで言うのなら……」
+「おーい」と紀佳。
+「よし、じゃあ決定だ！　応募とかの手続きは俺がやっとくから、お前ら三人は適当に買い物とか旅行の準備でもして待っててくれ。あ、何なら明日の土曜あたりに中央区でも行ってきたらどうだ？　この時期だとちょうどバーゲンやってるだろう？」
+
+　そんな風に昨日のことを思い出していた藤白の前に一台のバスが停まった。中からは年齢も性別も様々な人たちがぞろぞろと降りてきており、その中の一人に希海の姿もあった。
+「ご、ごめん！　めっちゃ遅れちゃった！」
+「あーいいっていいって。私達も今来たところだし」
+「よし、じゃあ三人そろったことだし、行くか」
+　そして三人は改札を抜けて、ブラウンのラインカラーをまとった電車に乗り込んだ。ここ鮮新台駅から繁華街のある中央駅までは三十分ほど。途中、菅原駅で郊鉄に乗り換え、三駅ほど電車に揺られればもう到着である。電車の中では特に会話もない三人だったが、目的地が近づくほどに気分が高揚していくのを感じる藤白だった。
 「着いたね」
 　そして三人は郊鉄の中央駅に降り立った。
 「っと……。流石に土曜は人多いなあ……」
 　そういって頭をぽりと掻く希海。
 　十面九線の櫛型ホームに止まった電車からはぞろぞろとアリの群れように人が降りてくる。藤白は二人を見失わないよう、背後に注意をしながらとりあえず改札まで歩くことにした。
-「で、どこ行くの？」と希海。
-「とりあえず紀佳が靴買いたいんだってさ。だからまずは……」
-　そうして三人がやってきたのは、駅の東にあるファッションビルである。赤と白の外壁に彩られた九回建ての建造物。その最上階には観覧車が設けられ、中央駅付近のランドマークと呼べるような場所だった。入り口付近には待ち合わせをする多くの若者がたむろし、いかにも都心のファッションセンターという雰囲気である。
-　三人は一階から順に各テナントを見ていくことにした。
-　土曜日のファッションビルには学生らしき若者やカップルが多く行き来し、なかなか落ち着いて買い物ができる状態ではない。だが、その往来の多さは逆に今の自分達の距離感にはぴったりなのかもしれないと藤白は思った。この喧騒の中が三人の間に横たわる沈黙をかき消してくれる。会話が少なくても静寂が場を支配することはない。
-　そんなことを考えていると、一組の初々しいカップルが目の前を通り過ぎた。
-　セミロングの黒髪をした中学生くらいの少女と、彼女よりは少しだけ年上のような落ち着いた雰囲気の少年。なるほど、と藤白は思う。彼らもこの喧騒を頼ってこの場所に来たのかもしれない。
-　そんなことを考えながら建物の中を歩いていると、やがて五階の靴屋に行き着いた。
-「そういや紀佳、靴買うんだっけ？」
-「うん」
-「じゃあちょっと見ていこうよ」
-　そう言って三人はそろって靴屋のテナントに足を踏み入れた。店の中には色とりどりの、デザインも様々な靴が置かれている。
-「あっ、これなんかいいんじゃない？」
-　そう言って希海が指し示したのはスタイリッシュな青いスニーカー。星マークがあしらわているのがいかにも男の子向け、という感じだった。
-「うーん……少しかっこ良すぎかも……」
-「じゃあこういうのは？」
-　次に希海が差し出したのはいかにもスポーツタイプ、という様子のハイテクスニーカー。
-「高すぎだしデザインがちょっと……」
-　そう言ってぶんぶんと首をふる紀佳。確かにどのラインナップもちょっとボーイッシュな感じで、希海が自分のセンスで選んでいるのは明白だった。
-「いつもみたいにカズくんが選んでよ」
-「えーっ、また俺が？」
-「カズくん、ファッションセンスあるし」
-「えっ、そうなんだ。そういえば藤白くん、着ている服もちょっとオシャレだもんね」
-　希海は納得といった表情で藤白の服を指差してみせる。藤白が今日来てる服は綺麗系のジャケットに赤いネクタイといった出で立ちだ。そこまでオシャレでもセンスがあるとも思えないが、まあ希海に褒められるのもまんざらでもない。
-「うーんそうだなあ……。じゃあこれなんかどうだ？」
-　そして藤白が選んだのは可愛らしいハートマークのあしらわれた、白いスニーカーだった。
-「これならそんなに派手でもないし、ワンポイントのアクセントも効いてるし、可愛らしい感じが紀佳に似合うと思うぞ」
-「じゃあそれで」
-　即決した紀佳に「早っ！」と声をこぼす希海。
-「じゃあちょっとレジ行ってくる」
-　そう言って紀佳は棚から目当てのサイズのものを探しだし、手に持ってレジに行ってしまう。その様子を希海と藤白は遠くから眺めていた。
-「……『いつもみたいに』？」
-「えっ？」
-「『いつもみたいに選んでよ』って古江さん言ってたけど、藤白くん、よく古江さんと出掛けるんだ？」
-「あー……まあそうかな。幼馴染だし、昔からよく色んな所に行ったからなぁ」
-「そうなんだ」
-「あいつとは何というか昔からあんな感じでさ。何考えてるかよく分かんないところあるから、先輩も苦労すると思うけど、仲良くしてやってくれよな」
-「う、うん……」
-「お待たせー」
-　二人が話していると紀佳が大きな袋を手に戻ってきた。
-「買ったのか？」
-「うん。ほらもう履いてるよ」
-　そう言って紀佳は片足を上げると自分の履いている靴を指差してみせる。
-「おおー。なかなかいいじゃない」
-「どやぁ」
-「あんたが選んだんじゃないでしょうが……」
-　店を出た三人は行く当てもなく、ファッションビルを上へ上へと登っていく。
-　用事が終わったのだからそのまま回れ右して外へ出ても良かったのだが、こういうのはぺちゃくちゃ喋りながらウィンドウショッピングをするのが楽しいのだと藤白は思う。ちょっと目についた可愛らしい小物を見せあいっこしてみたり、買う予定もない服を試着して『似合う』だの『似合わない』だの言ってみたり。そういうちょっとしたやりとりの積み重ねが、自分や紀佳と希海の絆を太くしていくものなのだ。
+　改札を出て駅の外に出ると、強い夏の日差しが三人に降り注ぐ。濃密で重たい夏の空気とそれに溶けてくような人々の喧騒。いつもの夏の、いつもの都心だった。
+「で、どこ行くの？」
+　横を歩いていた希海が気だるそうに言う。。
+「とりあえず水着だろ？　だったら――」
+　そうして三人が向かったのは、駅の東にあるファッションビルである。赤と白の外壁に彩られた九回建ての建造物。その最上階には観覧車が設けられ、中央駅付近のランドマークと呼べるような場所だった。入り口付近には待ち合わせをする多くの若者がたむろし、いかにも都心のファッションセンターという雰囲気である。
+　建物の中に入ると一転ひんやりとした空気が三人を出迎えた。入り口の案内板によるとスポーツ用品店は七階である。エスカレーターを登って店の中に入ると、そこには色とりどりの、デザインも様々な水着が置かれていた。
+「おおーっ。こんなに沢山あるとどれ買えばいいか迷っちゃうわねえ……」
+　そう言って感嘆の声を上げたのは希海。本日水着を選ぶのは彼女だ。
+「あっ、これなんか青山さんに似合うんじゃない？」
+「えっ、どれどれ？　……っておい」
+　紀佳が指し示したのは、真っ黒でいかついダイビングスーツだった。
+「海女さんの真似事でもさせる気かっ！！」
+　わいわいと楽しそうにあれこれ選んでいる希海と紀佳。よし、これは自分も負けていられないと、藤白は一つの水着を手にとった。
+「先輩、こんなのはどうかな？」
+「うーん……これもちょっと派手すぎない？」
+　藤白が持ってきたのは真っ赤なパレオ付きのビキニである。確かにちょっと派手かもしれないし希海が尻込みするのも分かる。だが……
+「でも先輩、赤い色が結構似合うと思うんだよな」
+「そ、そうかな……？」
+「うん、先輩いつも寒色系の服ばっかり着てるけど、たまにはこういう目立つ色もいいと思うぜ？」
+　そんな風に、あれでもないこれでもないと選んでいると、あっという間に小一時間が経過してしまう。結局希海が買ったのは藤白に選んでもらった赤いパレオ付きのビキニだった。
+　店を出た三人は行く当てもなくファッションビルを上へ上へと登っていく。
+　用事が終わったのだからそのまま回れ右して外へ出ても良かったのだが、こういうのはぺちゃくちゃ喋りながらウィンドウショッピングをするのが楽しいのだと藤白は思う。ちょっと目についた可愛らしい小物を見せあいっこしてみたり、買う予定もない服を試着して『似合う』だの『似合わない』だの言ってみたり。そういうちょっとしたやりとりの積み重ねが、今の自分達にとっては何よりも充実した時間の過ごし方なのである。
 　そして三人が行き着いたのはファッションビルの最上階。
 　そこには服飾系のテナントがなく、ただアミューズメント施設が一軒ぽつんとあるだけである。だが、そんな何もないはずの場所にも多くの人が行き来し、あまつさえ長蛇とも言えるほどの長い列を作っている。
 「あっ、そういえばここ」
-　その人の列を見て口を開いたのは希海だった。
-「ここさ、屋上に観覧車があるんだよね」
-「ああ、そういえばそうだったな。てことはこの列はみんな観覧車に乗ろうとしている人なのか……」
-「ねえ、二人とも。せっかくだし、ここの観覧車乗って行かない？」
-　希海はそう言ってすこし躊躇いがちに提案してみせる。
-　ビルに食い込むようにして回る赤い観覧車。この辺りの名物だというのに、そういえば乗ったことがなかった。
-「いいんじゃないか。せっかくだし乗っていこうぜ……って、あ」
-　そうして紀佳の方をふり返った藤白ははっとする。
+　その人の列を見て口を開いたのは藤白だった。
+「ここさ、屋上に観覧車があるんだぜ」
+「ああ、そういえばそうだったね。てことはこの列はみんな観覧車に乗ろうとしている人なのかな……？」と紀佳
+　ビルに食い込むようにして回る赤い観覧車はこの辺りの名物である。中央駅近辺には買い物で何度も訪れているし、そのたびにこのランドマークは何度も目にしてきた。だが実際に乗ったことといえばただの一度もなかったことを藤白は思い出す。
+「なあ、二人とも。せっかくだし、ここの観覧車乗って行かないか？」
 「無理」
-　紀佳は両手で顔を覆い隠してわざとらしくガタガタと震えるような素振りをみせている。
-「私、高いの苦手。だから行くなら二人でどうぞ」
+　だが一方の紀佳は両手で顔を覆い隠してわざとらしくガタガタと震えるような素振りをみせている。
 「あー……」
-　そう言って脱糞した藤白だった。
+　そうだった。
+　紀佳は昔から高いところが苦手で、ジャングルジムのてっぺんに登ることすら怖がる始末だった。
+「私、ここで待ってるから、行くなら二人だけでどうぞ」
+「うーん……先輩は？」
+「…………」
+　だが呼びかけた希海は少し遠い目線で観覧車の入り口を眺めているばかりで、藤白の問いに答えようとしない。
+「先輩……？」
+「あ、ああ……。ごめん聞いてなかった。なに？」
+「せっかくだから、ここの観覧車乗っていこうかって話してたんだけど……」
+「え、えっと……。うん……悪くないんじゃないかな？」
+「じゃあ決まりだな！　俺は先輩と乗ってくるから、紀佳はここで留守番しててくれ」
+　そして藤白は希海と観覧車に乗ることになった。
+　長蛇というほどでもないが、しかし相応には長い列に並び、順番が来るとスタッフに誘導されて個室に入る。扉が占められるとごうん、と少しだけユニットが揺れた。
+「いってらっしゃーい」
+　個室が建物から離れる直前、手を振る紀佳の姿が見えた。
+　そしてその後も観覧車はどんどん高度を増していく。
+　次第に右手の窓からは、お目当ての眺望が見えはじめた。だがこの近辺は超高層ビルが多く、観覧車の背丈を超える建物が林立しているせいで景色はそれほど良くない。夜に来れば夜景が綺麗だったのかもしれないが、あいにく今は昼だ。雑木林のように立ち並ぶビル群に視界を塞がれた藤白は、ふぅ、と一つため息を付いて希海の方を向いた。
+「…………」
+　だが希海は、何も言わずにただ、その景色を心ここにあらずといった様子で眺めている。
+「なあ先輩」
+「あ、なに？　藤白くん」
+「さっきから何かぼーっとしてるみたいだけど、どうしたんだ」
+「あっ、ごめん……。別にたいしたことじゃないの。ただ、昔に一度だけここに来たことがあってさ。懐かしいな……と思って」
+「そうなんだ。誰と来たんだ？」
+「…………」
+　だが希海はそれに答えない。答えないから、藤白も何も言わない。
+　そしてしばらくの間、会話が止まった。
+　藤白は向かいに座った顔をちらりと覗き見てみる。希海は相変わらず外の景色に目をやったままで、その視線はどこか遠い。
+　沈黙の中、そういえば希海と二人っきりになるのは初めて一緒に帰って以来のことだと思い出す。あの頃はまだお互いをよく知らなかったから、話すことも沢山あった。でも今は――
+（そういえば……）
+　そういえば、まだ希海に聞いていないことが一つだけあった。出会った頃は聞けなかったこと。でも、今なら。今なら聞いても良いのかもしれない。
+「なあ……先輩って彼氏とかいるの？」
+　沈黙。しばらくそのまま窓の外を眺めていた希海はやがて、ぽつりとつぶやくように
+「いないよ。藤白くんは？」
+「おれも居ない」
+「そうなの？　でも紀佳ちゃんは……？」
+「の、紀佳は違うよ。あいつはなんというか単なる幼馴染でさ……。別にそういう関係じゃない」
+「そうなんだ。でも紀佳ちゃんいいんじゃない？　あの子、クラスでも人気高いよ。男子がそんな話してるの聞いたことある」
+　そうなのか？と藤白は思う。まあ確かに男ウケしそうな外見ではあるのだが。
+「一体どんなこと言われてんだあいつ……」
+「色々よ……。可愛いだとか、運動オンチなのが守ってあげたくなるとか、他には……そ、その……」
+　言って希海は少し気まずそうに口をつぐみ、
+「処女っぽい……とか」
+「…………」
+「…………」
+　確かに紀佳にそういう経験がないであろうことはいつも近くに居た自分が何よりもよく知っている。だが、そんな生々しい単語をこんな閉鎖された場所で出されたのではたまったものではなかった。
+「……そ、そうだな。それよりもさ」
+　いけない。この気まずい空気をなんとか変えないと。そう思って藤白が強引に話題を変えようとしたそのとき。
+「ねえ、藤白くん。やっぱり、男の人って、そういう方がいいものなの？」
+　希海がそうこぼした。
+「私、昔彼氏いたんだ。」
+　心臓がどくり、と嫌な音を立てる。
+「高一の頃の話でさ、この観覧車もその人と来たんだけど……。その……その人とは色んなことしたよ。それこそ、その……普通の恋人同士がやることもちゃんとやった」
+　普通の恋人同士がやること。その単語に胃が暴れだすのを感じた。
+「藤白くんもやっぱり……そういうの……嫌……なのかな？」
+「い、嫌っていうか……。なんだろう」
+　考えがまとまらない。
+　確かに、男はさ、女のそういう経験を良しとしないし、現に藤白だって今少なくないショックを受けている。でも……それはなんというか、嫌とかそういうことではなくて……。
+「悔しいんだよ。きっと」
+「悔しい？」
+「うん、自分の知らないところで自分の知らない奴がさ、自分の知らない経験を共有されるのが……悔しいんだと思う」
+　言って、なんと醜い話だと藤白は思った。結局それは世間が経験のない女を求めることと何も変わっていない。つまりそれは独占欲だ。自分の知らない誰かが、自分の好きな相手の歴史の一部を形成することが耐えられない。そういう薄汚い独占欲をオブラートに包んで言っただけにすぎない。
+　だが、希海は少しだけ納得したように、
+「そっか」
+　とそうこぼすのだった。
+　観覧車が頂点に達し、視界がさっきよりも少し開ける。だが、希海も藤白も何も言わない。希海はその眼前に広がる少し狭い眺望を眺め、藤白は希海のそんな横顔をただひたすらに眺めていた。
 </div>
 
     <div id="footer" v-component="metastable-page-footer"></div>
@@ -194,7 +197,7 @@
 
 <script type="text/javascript">
 <!--
-document.cookie="hpftflag=hpftflag0;max-age=15552000";
+document.cookie="ms3flag=ms3flag0;max-age=15552000";
 //-->
 </script>
 
