ちょっと修正

--- a/metastable3/-.html
+++ b/metastable3/-.html
@@ -179,7 +179,7 @@
 「藤白くんもやっぱり……そういうの……嫌……なのかな？」
 「い、嫌っていうか……。なんだろう」
 　考えがまとまらない。
-　確かに、男はさ、女のそういう経験を良しとしないし、現に藤白だって今少なくないショックを受けている。でも……それはなんというか、嫌とかそういうことではなくて……。
+　確かに男は女のそういう経験を良しとしないし、現に藤白だって今少なくないショックを受けている。でも……それはなんというか、嫌とかそういうことではなくて……。
 「悔しいんだよ。きっと」
 「悔しい？」
 「うん、自分の知らないところで自分の知らない奴がさ、自分の知らない経験を共有されるのが……悔しいんだと思う」
