--- a/picture/riko06.html
+++ b/picture/riko06.html
@@ -14,7 +14,7 @@
   </div>
   
   <div class="image">
-    <img src="image/riko06.jpg" alt="">
+    <img src="image/riko06.png" alt="">
   </div>
 
   <div class="picturetitle">
