ちょまどさんのサイトのバナー追加

--- a/link.html
+++ b/link.html
@@ -33,12 +33,12 @@
         <td class="nobanner"><a href="http://www.pixiv.net/member.php?id=13861560" target="_blank"><span class="pbanner">　フ　ナ　</span></a></td>
       </tr>
       <tr>
+        <td class="nobanner"><a href="http://mypage.syosetu.com/152704/" target="_blank"><span class="pbanner">如 月 真 弘</span></a></td>
         <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="banner/bana-2.jpg"></a></td>
         <td class="nobanner"><a href="http://ncode.syosetu.com/n0742cc/" target="_blank"><span class="pbanner">通り過ぎる100のエッセイ</span></a></td>
-        <td class="banner"><a href="http://bunfree.net/" target="_blank"><img src="banner/bunfree_banner01.gif"></a></td>
       </tr>
       <tr>
-        <td class="nobanner"><a href="http://osakabunfree.com/" target="_blank"><span class="pbanner">文学フリマ大阪</span></a></td>
+        <td class="banner"><a href="http://bunfree.net/" target="_blank"><img src="banner/bunfree_banner01.gif"></a></td>
         <td class="banner"><a href="http://syosetu.com/" target="_blank"><img src="banner/banner_narou.gif"></a></td>
       </tr>
     </tbody>
@@ -50,24 +50,25 @@
     <tbody>
       <tr>
         <td class="nobanner"><a href="http://www.pixiv.net/member.php?id=10662" target="_blank"><span class="pbanner">れーちぇさん</span></a></td>
-        <td class="nobanner"><a href="http://duxca.github.io/" target="_blank"><span class="pbanner">KAMO&NEGIS!</span></a></td>
         <td class="nobanner"><a href="http://www.pixiv.net/member.php?id=4658416" target="_blank"><span class="pbanner">ハコSDT</span></a></td>
+        <td class="banner"><a href="http://chomado.com/" target="_blank"><img src="banner/logo3.png"></a></td>
       </tr>
       <tr>
-        <td class="nobanner"><a href="http://chomado.com/" target="_blank"><span class="pbanner">@chomado ちょまど帳</span></a></td>
         <td class="nobanner"><a href="https://fukurowl.booth.pm/" target="_blank"><span class="pbanner">　梟　流　</span></a></td>
         <td class="nobanner"><a href="http://g-takanashi.tumblr.com/" target="_blank"><span class="pbanner">Takanashi Ya</span></a></td>
+        <td class="nobanner"><a href="http://duxca.github.io/" target="_blank"><span class="pbanner">KAMO&NEGIS!</span></a></td>
+
       </tr>
       <tr>
+        <td class="nobanner"><a href="http://asuka-46.lolipotouch.jp/" target="_blank"><span class="pbanner">Drawing of Asuka</span></a></td>      
         <td class="nobanner"><a href="http://www.pixiv.net/member.php?id=13861560" target="_blank"><span class="pbanner">　フ　ナ　</span></a></td>
-        <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="banner/bana-2.jpg"></a></td>
-        <td class="banner"><a href="http://alohtas.web.fc2.com/" target="_blank"><img src="banner/banner.png"></a></td>
-      </tr>
-      <tr>
-        <td class="nobanner"><a href="http://yanagihatei.hatenablog.com/" target="_blank"><span class="pbanner">代名詞</span></a></td>
-        <td class="nobanner"><a href="http://asuka-46.lolipotouch.jp/" target="_blank"><span class="pbanner">Drawing of Asuka</span></a></td>
         <td class="nobanner"><a href="http://www.pixiv.net/novel/member.php?id=2444663" target="_blank"><span class="pbanner">hakoniwa(PYU)</span></a></td>
       </tr>
+      <tr>
+        <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="banner/bana-2.jpg"></a></td>
+        <td class="banner"><a href="http://alohtas.web.fc2.com/" target="_blank"><img src="banner/banner.png"></a></td>
+        <td class="nobanner"><a href="http://yanagihatei.hatenablog.com/" target="_blank"><span class="pbanner">代名詞</span></a></td>
+     </tr>
       <tr>
         <td class="nobanner"><a href="http://www.goldfishkingdom.client.jp/" target="_blank"><span class="pbanner">金魚王国の崩壊</span></a></td>
         <td class="banner"><a href="http://ugf.nengu.jp/index.html" target="_blank"><img src="banner/banner11.jpg"></a></td>
@@ -107,12 +108,12 @@
     <tbody>
       <tr>
         <td class="nobanner"><a href="http://www.boleros.x0.com/" target="_blank"><span class="pbanner">Bolero's website</span></a></td>
-        <td class="nobanner"><a href="http://duxca.github.io/" target="_blank"><span class="pbanner">KAMO&NEGIS!</span></a></td>
+        <td class="banner"><a href="http://chomado.com/" target="_blank"><img src="banner/logo3.png"></a></td>
         <td class="nobanner"><a href="http://as-capabl.hateblo.jp/" target="_blank"><span class="pbanner">Project German-style</span></a></td>
       </tr>
       <tr>
-        <td class="nobanner"><a href="http://chomado.com/" target="_blank"><span class="pbanner">@chomado ちょまど帳</span></a></td>
         <td class="nobanner"><a href="http://qiita.com/marionette-of-u" target="_blank"><span class="pbanner">marionette-of-u</span></a></td>
+        <td class="nobanner"><a href="http://duxca.github.io/" target="_blank"><span class="pbanner">KAMO&NEGIS!</span></a></td>
         <td class="nobanner"><a href="https://hayate2255.wordpress.com/" target="_blank"><span class="pbanner">小さいモノは美しい</span></a></td>
       </tr>
       <tr>
