ちょまどさんところのバナーを変更

--- a/link.html
+++ b/link.html
@@ -51,7 +51,7 @@
       <tr>
         <td class="nobanner"><a href="http://www.pixiv.net/member.php?id=10662" target="_blank"><span class="pbanner">れーちぇさん</span></a></td>
         <td class="nobanner"><a href="http://www.pixiv.net/member.php?id=4658416" target="_blank"><span class="pbanner">ハコSDT</span></a></td>
-        <td class="banner"><a href="http://chomado.com/" target="_blank"><img src="banner/logo3.png"></a></td>
+        <td class="banner"><a href="http://chomado.com/" target="_blank"><img src="banner/CRZmZDSVEAATFPm.jpg" style="border:none;"></a></td>
       </tr>
       <tr>
         <td class="nobanner"><a href="https://fukurowl.booth.pm/" target="_blank"><span class="pbanner">　梟　流　</span></a></td>
@@ -108,7 +108,7 @@
     <tbody>
       <tr>
         <td class="nobanner"><a href="http://www.boleros.x0.com/" target="_blank"><span class="pbanner">Bolero's website</span></a></td>
-        <td class="banner"><a href="http://chomado.com/" target="_blank"><img src="banner/logo3.png"></a></td>
+        <td class="banner"><a href="http://chomado.com/" target="_blank"><img src="banner/CRZmZDSVEAATFPm.jpg" style="border:none;"></a></td>
         <td class="nobanner"><a href="http://as-capabl.hateblo.jp/" target="_blank"><span class="pbanner">Project German-style</span></a></td>
       </tr>
       <tr>
