--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -30,6 +30,17 @@
   <div id="main-contents" class="contents">
     <img class="hpft-cover" id="cover" src="../img/title0.png"/>
     <div id="main-hpft-index" v-component="hpft-index"></div>
+   
+    <table class="appendix">
+      <tbody class="appendix">
+        <tr>
+         <td><a href="https://minamichihaya.booth.pm/" target="_blank"><img src="../img/hpft_bs.png"></a></td>
+         <td><a href="http://dark-constexpr.github.io/" target="_blank"><img src="../img/dark-constexpr-bunner.gif"></a></td>
+         <td><a href="http://ncode.syosetu.com/n9592cf/" target="_blank"><img src="../img/banner_narou.gif"></a></td>
+        </tr>
+      </tbody>
+    </table>
+    
   </div>
  </body>
 </html>
