ブックセンターに誘導

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <div class="information" style="display:;">
     <div style="font-weight:bold;">10/25(日)　<a href="http://bunfree.net/?fukuoka_bun01" target="_blank">第一回文学フリマ福岡</a>に出展します(<a href="https://c.bunfree.net/c/fukuoka01/!/%E3%81%82/29" target="_blank">あ-29・30</a>)</div>
-    当日は『<a href="hardproblem/">ふたりのハードプロブレム</a>』書籍版と<br>
+    当日は<a href="https://minamichihaya.booth.pm/" target="_blank">『ふたりのハードプロブレム』書籍版</a>と<br>
     アンソロジー『みんなのハードプロブレム』を<br>
     販売しますのでどうぞよろしくお願いします。<br>
     カタログは<a href="https://c.bunfree.net/c/fukuoka01" target="_blank">コチラ</a>。
