--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <td><a href="http://ask.fm/mayuragicenter" target="_blank">ask.fm</a></td>
       </tr>
       <tr>
+        <td><a href="https://minamichihaya.booth.pm/" target="_blank">BOOTH</a></td>
         <td><a href="http://pixiv.me/mayuragicenter" target="_blank">pixiv</a></td>
-        <td><a href="https://github.com/minamichihaya" target="_blank">GitHub</a></td>
         <td><a href="http://www.amazon.co.jp/registry/wishlist/2JXRC6JN5HL1S" target="_blank">Wishlist</a></td>
       </tr>
       <tr>
