--- a/link.html
+++ b/link.html
@@ -149,6 +149,7 @@
       <tr>
         <td class="nobanner"><a href="http://homepage1.nifty.com/suzuri/index.htm" target="_blank"><span class="pbanner">ギリシャの箱</span></a></td>
         <td class="nobanner"><a href="http://mujina.sakura.ne.jp/history/" target="_blank"><span class="pbanner">市町村変遷パラパラ地図</span></a></td>
+        <td class="nobanner"><a href="https://booth.pm/ja" target="_blank"><span class="pbanner">BOOTH</span></a></td>
       </tr>
     </tbody>
   </table>
