--- a/link.html
+++ b/link.html
@@ -140,7 +140,7 @@
       <tr>
         <td class="banner"><a href="https://github.com/" target="_blank"><img src="banner/github.png"></a></td>
         <td class="banner"><a href="http://www.htmq.com/index.htm" target="_blank"><img src="banner/logo.gif"></a></td>
-        <td class="banner"><a href="http://ja.wikipedia.org/wiki/%E3%83%A1%E3%82%A4%E3%83%B3%E3%83%9A%E3%83%BC%E3%82%B8" target="_blank"><img src="banner/Lemon_wiki_banner.jpg"></a></td>
+        <td class="banner"><a href="http://ja.wikipedia.org/wiki/%E3%83%A1%E3%82%A4%E3%83%B3%E3%83%9A%E3%83%BC%E3%82%B8" target="_blank"><img src="banner/Lemon_wiki_banner.jpg" style="border:none;"></a></td>
       <tr>
         <td class="nobanner"><a href="http://en.wiktionary.org/wiki/Wiktionary:Main_Page" target="_blank"><span class="pbanner">Wiktionary</span></a></td>
         <td class="nobanner"><a href="http://www.weblio.jp/" target="_blank"><span class="pbanner">Weblio辞書</span></a></td>
