戻るボタンを追加

--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -30,7 +30,7 @@
   <div id="main-contents" class="contents">
     <img class="hpft-cover" id="cover" src="../img/title0.png"/>
     <div id="main-hpft-index" v-component="hpft-index"></div>
-   
+
     <table class="appendix">
       <tbody class="appendix">
         <tr>
@@ -40,8 +40,11 @@
         </tr>
       </tbody>
     </table>
-    
+
   </div>
+
+  <div class="back"><a href="../novel.html#hardproblem">戻る</div>
+
  </body>
 </html>
 
