イベントページのレイアウトを変更

--- a/event.html
+++ b/event.html
@@ -17,44 +17,36 @@
     イベントの参加履歴／参加予定
   </div>
 
-
   <table class="event">
     <tbody>
 
       <tr>
-        <td rowspan="2" class="eventdate">2015/11/23</td>
-    　　　　<td class="eventtitle"><span class="event">第二十一回文学フリマ東京</span>　???／<a href="http://dark-constexpr.github.io/" target="_blank">暗黒定数式</a></td>
-      </tr>
-      <tr>
-      	<td class="eventcaption">『<a href="http://dark-constexpr.github.io/publications/vol2.html" target="_blank">暗黒定数式 Vol.2</a>』に「ふたりのハードプロブレム」§4～6を寄稿<br>『ふたりのハードプロブレム』文庫版を販売<br>アンソロジー『みんなのハードプロブレム』を販売</td></tr>
+        <td class="eventdate">2015/11/23</td>
+        <td class="event"><span class="event"><a href="http://bunfree.net/?tokyo_bun21" target="_blank">第二十一回文学フリマ東京</a></span>　C-64／<a href="http://dark-constexpr.github.io/" target="_blank">暗黒定数式</a><br>
+        『<a href="http://dark-constexpr.github.io/publications/vol2.html" target="_blank">暗黒定数式 Vol.2</a>』に「ふたりのハードプロブレム」§4～6を寄稿<br>
+        『ふたりのハードプロブレム』単行本を販売<br>
+        アンソロジー『みんなのハードプロブレム』を販売</td></tr>
 
       <tr>
-        <td rowspan="2" class="eventdate">2015/10/25</td>
-    　　　　<td class="eventtitle"><span class="event"><a href="https://c.bunfree.net/c/fukuoka01" target="_blank">第一回文学フリマ福岡</a></span>　あ-29・30／真揺中心</td>
-      </tr>
-      <tr>
-      	<td class="eventcaption">『ふたりのハードプロブレム』文庫版を販売<br>アンソロジー『みんなのハードプロブレム』を販売</td></tr>
+        <td class="eventdate">2015/10/25</td>
+        <td class="event"><span class="event"><a href="https://c.bunfree.net/c/fukuoka01" target="_blank">第一回文学フリマ福岡</a></span>　あ-29・30／真揺中心<br>
+        『ふたりのハードプロブレム』単行本を販売
+        <br>アンソロジー『みんなのハードプロブレム』を販売</td></tr>
 
       <tr>
-        <td rowspan="2" class="eventdate">2015/09/20</td>
-    　　　　<td class="eventtitle"><span class="event"><a href="https://c.bunfree.net/c/osaka03" target="_blank">第三回文学フリマ大阪</a></span>　C-22／真揺中心</td>
-      </tr>
-      <tr>
-      	<td class="eventcaption">『ふたりのハードプロブレム』文庫版を販売</td></tr>
+        <td class="eventdate">2015/09/20</td>
+        <td class="event"><span class="event"><a href="https://c.bunfree.net/c/osaka03" target="_blank">第三回文学フリマ大阪</a></span>　C-22／真揺中心<br>
+        『ふたりのハードプロブレム』単行本を販売</td></tr>
 
       <tr>
-        <td rowspan="2" class="eventdate">2014/12/29</td>
-    　　　　<td class="eventtitle"><span class="event">コミックマーケット87</span>（2日目）　東ソ-08a／RedTailCat</td>
-      </tr>
-      <tr>
-      	<td class="eventcaption">『<a href="http://dark-constexpr.github.io/publications/vol1.html" target="_blank">暗黒定数式 Vol.1</a>』委託販売</td></tr>
+        <td class="eventdate">2014/12/29</td>
+        <td class="event"><span class="event">コミックマーケット87</span>（2日目）　東ソ-08a／RedTailCat<br>
+        『<a href="http://dark-constexpr.github.io/publications/vol1.html" target="_blank">暗黒定数式 Vol.1</a>』委託販売</td></tr>
 
       <tr>
-        <td rowspan="2" class="eventdate">2014/11/24</td>
-    　　　　<td class="eventtitle"><span class="event">第十九回文学フリマ東京</span>　Fホール(2F) イ-67／<a href="http://dark-constexpr.github.io/" target="_blank">暗黒定数式</a></td>
-      </tr>
-      <tr>
-      	<td class="eventcaption">『<a href="http://dark-constexpr.github.io/publications/vol1.html" target="_blank">暗黒定数式 Vol.1</a>』に「ふたりのハードプロブレム」§1～3を寄稿</td></tr>
+        <td class="eventdate">2014/11/24</td>
+        <td class="eventtitle"><span class="event">第十九回文学フリマ東京</span>　Fホール(2F) イ-67／<a href="http://dark-constexpr.github.io/" target="_blank">暗黒定数式</a><br>
+        『<a href="http://dark-constexpr.github.io/publications/vol1.html" target="_blank">暗黒定数式 Vol.1</a>』に「ふたりのハードプロブレム」§1～3を寄稿</td></tr>
 
     </tbody>
   </table>
