東京文フリの告知

--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
   </table>
 
   <div class="information" style="display:;">
-    <div style="font-weight:bold;">10/25(日)　<a href="http://bunfree.net/?fukuoka_bun01" target="_blank">第一回文学フリマ福岡</a>に出展します(<a href="https://c.bunfree.net/c/fukuoka01/!/%E3%81%82/29" target="_blank">あ-29・30</a>)</div>
-    当日は<a href="https://minamichihaya.booth.pm/" target="_blank">『ふたりのハードプロブレム』単行本</a>と<br>
-    アンソロジー『みんなのハードプロブレム』を<br>
+    <div style="font-weight:bold;">11/23(月)　<a href="http://bunfree.net/?tokyo_bun21" target="_blank">第二十一回文学フリマ東京</a>(<a href="https://c.bunfree.net/c/tokyo21/1F/C/64" target="_blank">C-64／暗黒定数式</a>)</div>
+    売り子として参加します。<br>
+    当日は『ふたりのハードプロブレム』単行本と<br>
+    アンソロジー『みんなのハードプロブレム』も<br>
     販売しますのでどうぞよろしくお願いします。<br>
-    カタログは<a href="https://c.bunfree.net/c/fukuoka01" target="_blank">コチラ</a>。
+    カタログは<a href="https://c.bunfree.net/c/tokyo21" target="_blank">コチラ</a>。
   </div>
   
 </body>
