--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </tbody>
   </table>
 
-  <div class="information" style="display:;">
+  <div class="information" style="display:none;">
     <div style="font-weight:bold;">11/23(月)　<a href="http://bunfree.net/?tokyo_bun21" target="_blank">第二十一回文学フリマ東京</a>(<a href="https://c.bunfree.net/c/tokyo21/1F/C/64" target="_blank">C-64／暗黒定数式</a>)</div>
     売り子として参加します。<br>
     当日は『ふたりのハードプロブレム』単行本と<br>
