ファイル名を変更

--- a/picture/gift19.html
+++ b/picture/gift19.html
@@ -14,7 +14,7 @@
   </div>
   
   <div class="image">
-    <img src="image/CSppnxKUEAA3GNZ.jpg" alt="">
+    <img src="image/gift19.jpg" alt="">
   </div>
   
   <div class="picturetitle">
