あけましておめでとうございます

--- a/picture.html
+++ b/picture.html
@@ -18,7 +18,13 @@
   </div>
   
   <table class="picture">
-    <caption>らくがき（2015～）</caption>
+    <caption>らくがき（2016）</caption>
+      <tr>
+        <td><a href="picture/hardproblem04.html"><img src="thumbnail/tn_hardproblem04.jpg"></a></td>
+      </tr>
+
+  <table class="picture">
+    <caption>らくがき（2015）</caption>
     <tbody>
       <tr>
         <td><a href="picture/lushana01.html"><img src="thumbnail/tn_lushana01.jpg"></a></td>
