メタステ§1に絵をつける

--- a/metastable3/1-01.html
+++ b/metastable3/1-01.html
@@ -13,6 +13,10 @@
   <div v-component="metastable-page-header"></div>
 
   <div class="contents">
+  
+<div class="logo hpft-sect1-logo">
+  <img src="../img/ms3_section1.png" />
+</div>
 
 <div class="text">
 　――３
