--- a/picture.html
+++ b/picture.html
@@ -20,7 +20,14 @@
   <table class="picture">
     <caption>らくがき（2016）</caption>
       <tr>
+        <td><a href="picture/noel01.html"><img src="thumbnail/tn_noel01.jpg"></a></td>
         <td><a href="picture/hardproblem04.html"><img src="thumbnail/tn_hardproblem04.jpg"></a></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
 
   <table class="picture">
@@ -155,26 +162,30 @@
     <caption>いただきもの</caption>
     <tbody>
       <tr>
+        <td><a href="picture/gift27.html"><img src="thumbnail/tn_gift27.jpg"></a></td>
+        <td><a href="picture/gift26.html"><img src="thumbnail/tn_gift26.jpg"></a></td>
+        <td><a href="picture/gift25.html"><img src="thumbnail/tn_gift25.jpg"></a></td>
+        <td><a href="picture/gift24.html"><img src="thumbnail/tn_gift24.jpg"></a></td>
         <td><a href="picture/gift23.html"><img src="thumbnail/tn_gift23.jpg"></a></td>
         <td><a href="picture/gift22.html"><img src="thumbnail/tn_gift22.jpg"></a></td>
         <td><a href="picture/gift21.html"><img src="thumbnail/tn_gift21.jpg"></a></td>
         <td><a href="picture/gift20.html"><img src="thumbnail/tn_gift20.jpg"></a></td>
+      </tr>
+      <tr>
         <td><a href="picture/gift19.html"><img src="thumbnail/tn_gift19.jpg"></a></td>
         <td><a href="picture/gift18.html"><img src="thumbnail/tn_gift18.jpg"></a></td>
         <td><a href="picture/gift17.html"><img src="thumbnail/tn_gift17.jpg"></a></td>
         <td><a href="picture/gift16.html"><img src="thumbnail/tn_gift16.jpg"></a></td>
-      </tr>
-      <tr>
         <td><a href="picture/gift13.html"><img src="thumbnail/tn_gift13.jpg"></a></td>
         <td><a href="picture/gift11.html"><img src="thumbnail/tn_gift11.jpg"></a></td>
         <td><a href="picture/gift10.html"><img src="thumbnail/tn_gift10.jpg"></a></td>
         <td><a href="picture/gift09.html"><img src="thumbnail/tn_gift09.jpg"></a></td>
+      </tr>
+      <tr>
         <td><a href="picture/gift08.html"><img src="thumbnail/tn_gift08.jpg"></a></td>
         <td><a href="picture/gift07.html"><img src="thumbnail/tn_gift07.jpg"></a></td>
         <td><a href="picture/gift06.html"><img src="thumbnail/tn_gift06.jpg"></a></td>
         <td><a href="picture/gift04.html"><img src="thumbnail/tn_gift04.jpg"></a></td>
-      </tr>
-      <tr>
         <td><a href="picture/gift03.html"><img src="thumbnail/tn_gift03.jpg"></a></td>
         <td><a href="picture/gift01.html"><img src="thumbnail/tn_gift01.jpg"></a></td>
       </tr>
